--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Education Funding and Investments for FY16 | phila.gov</title>
+        <title>Pilot Realty Store -</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta name="googlebot" content="index" />
         <meta name='robots' content='index, max-image-preview:large' />
-        <meta content="Education Funding and Investments for FY16 | phila.gov" name="Education Funding and Investments for FY16 | phila.gov ccc news update">
-        <meta content="Education Funding and Investments for FY16 | phila.gov" name="Education Funding and Investments for FY16 | phila.gov is the official Education Funding and Investments for FY16 | phila.gov supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.">
+        <meta content="Pilot Realty Store -" name="Pilot Realty Store - ccc news update">
+        <meta content="Pilot Realty Store -" name="Pilot Realty Store - is the official Pilot Realty Store - supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -692,7 +692,7 @@
                             <h3 class="title">Newsletter</h3>
                             <div class="newsletter">
                                 <p>
-                                   Education Funding and Investments for FY16 | phila.gov is the official Education Funding and Investments for FY16 | phila.gov supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.
+                                   Pilot Realty Store - is the official Pilot Realty Store - supporting the Board of Governors, Chancellor's Office, and the entire California Community College system.
                                 </p>
                                 <form>
                                     <input class="form-control" type="email" placeholder="Your email here">
@@ -724,7 +724,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 copyright">
-                        <p>Copyright &copy; <a href="/">Education Funding and Investments for FY16 | phila.gov</a>. All Rights Reserved</p>
+                        <p>Copyright &copy; <a href="/">Pilot Realty Store -</a>. All Rights Reserved</p>
                     </div>
                 </div>
             </div>
